# W5100s-EVB-Pico_Real_Clock_Display

./: README.md
examples/: CMakeLists.txt
examples/dhcp_dns/: CMakeLists.txt  w5x00_dhcp_dns.c
examples/http/server/: w5x00_http_server.c
examples/lcd_1602_i2c/: CMakeLists.txt  lcd_1602_i2c.c  lcd_1602_i2c_org.c  lcd_with_sntp.c
examples/loopback/: w5x00_loopback.c
examples/sntp/: w5x00_sntp.c
